[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylibyear"
version = "0.3.4"
description = "A simple measure of software dependency freshness."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
keywords = []
authors = [
  { name = "Sam Atkins", email = "opensource.primary573@passfwd.com" },
  { name = "nasirhjafri" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "httpx[http2]>=0.28.1",
    "packaging>=24.0",
    "prettytable>=3.10.0",
    "python-dateutil>=2.9.0.post0",
    "typer>=0.12.3",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-vcr>=1.0.2",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.hatch.build.targets.wheel]
packages = ["libyear"]

[project.scripts]
libyear = "libyear.main:app"

[project.urls]
Documentation = "https://github.com/sam-atkins/pylibyear#readme"
Issues = "https://github.com/sam-atkins/pylibyear/issues"
Source = "https://github.com/sam-atkins/pylibyear"
