[project]
name = "example"
readme = "README.md"
description = "A simple measure of software dependency freshness."
version = "0.3.0"
requires-python = ">= 3.12"

dependencies = [
    "requests>2.31.0",
    "prettytable>=3.10.0",
    "python-dateutil==2.9.0.post0",
    "typer>=0.12.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-vcr>=1.0.2",
]
cli = [
    "click>=7.1.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
